Fix sidebar overflow

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@
   }
 
   .toolbar {
-    @apply sticky top-0 z-30 flex h-14 items-center gap-1 bg-background-500 px-4 py-2 shadow-material;
+    @apply fixed top-0 z-30 flex h-14 w-full items-center gap-1 bg-background-500 px-4 py-2 shadow-material;
   }
 
   .text-input {
@@ -52,6 +52,10 @@
     display: grid;
     grid-template-columns: 72px 1fr;
     grid-template-rows: 1fr auto;
+  }
+
+  .h-toolbar {
+    @apply h-14;
   }
 
   .h-screen-toolbar {
